--- a/style/header.css
+++ b/style/header.css
@@ -18,7 +18,7 @@ div#h1 {
 #search {
     display: flex;
     position: absolute;
-    left: 43%;
+    left: 46%;
     background-color: rgb(164, 164, 164);
     border-radius: 20px;
     padding: 6px 22px 6px 10px;
@@ -35,6 +35,7 @@ div#h1 {
 #search:hover {
     background-color: white;
     transition-duration: 1s;
+    cursor: pointer;
 }
 
 #search:hover p {
@@ -46,27 +47,27 @@ div#h1 {
 
 /* LINKS */
 #navigation {
-    margin: 0px 0px 0px 70%;
+    margin: 0px 0px 0px 80%;
 }
 
 #navigation > li {
     display: inline-flex;  
-    margin: 0px 15px 0px 0px;
 }
 
-#navigation  a {
-    text-decoration: none;
+#navigation img {
+    width: 60%;
 }
 
-#navigation a:hover {
-    color: grey;
-    text-decoration: underline;
+#navigation img:hover {
+    transform: translateY(-5px);
+    transition-duration: 500ms;
 }
 
+/* TELA DE ATÉ 1000px */
 @media (max-width: 1000px) {
     #search {
         position: absolute;
-        left: 48%;
+        left: 50%;
         background-color: lightgrey;
         border-radius: 20px;
         padding: 4px 8px 4px 8px;
@@ -96,18 +97,28 @@ div#h1 {
         color: black;
         text-decoration: underline;
     }
+
+    #navigation {
+        margin: 0px 0px 0px 75%;
+    }
 }
 
-/* HEADER COM A TELA ATE 630px */
-@media (max-width: 630px) {
+/* HEADER COM A TELA ATÉ 760PX - navigation */
+@media (max-width: 760px) {
+    #navigation {
+        margin: 0px 0px 0px 70%;
+    }
+}
+
+/* HEADER COM A TELA ATE 650px */
+@media (max-width: 650px) {
     div#h1 {
         font-size: 0.8em;
     }
     
     #search {
         position: absolute;
-        left: 52%;
-        
+        left: 48%;
     }
     
     #search > img {
@@ -116,5 +127,25 @@ div#h1 {
 
     #search > p {
         display: none;
+    }
+
+    #search:hover {
+        left: 48%;
+        padding: 6px 10px 6px 10px;
+        transition-duration: 300ms;
+    }
+
+    #search:hover p {
+        display: none;
+        padding: 2px;
+        margin: 0px;
+    }
+
+    #navigation {
+        margin: 0px 0px 0px 60%;
+    }
+
+    #navigation img {
+        width: 55%;
     }
 }
