--- a/style/header.css
+++ b/style/header.css
@@ -149,3 +149,30 @@ div#h1 {
         width: 55%;
     }
 }
+
+/* telas menores que 500px */
+@media (max-width: 500px) {
+    div#h1 {
+        font-size: 0.67em;
+    }
+    
+
+    #search {
+        left: 80%;
+
+    }
+    
+    #search > img {
+        max-width: .4cm;
+    }
+
+    #search:hover {
+        left: 80%;
+        padding: 5px 9px 5px 9px;
+        transition-duration: 300ms;
+    }
+
+    #navigation {
+        display: none;
+    }
+} 
