ajustes do navigation para mobile

--- a/style/header.css
+++ b/style/header.css
@@ -63,6 +63,24 @@ div#h1 {
     transition-duration: 500ms;
 }
 
+
+#navigationmobile {
+    display: none;
+}
+
+#navigationmobile > li {
+    display: inline-flex;  
+}
+
+#navigationmobile img {
+    width: 60%;
+}
+
+#navigationmobile img:hover {
+    transform: translateY(-5px);
+    transition-duration: 500ms;
+}
+
 /* TELA DE ATÉ 1000px */
 @media (max-width: 1000px) {
     #search {
@@ -174,5 +192,18 @@ div#h1 {
 
     #navigation {
         display: none;
+    }
+
+    #navigationmobile {
+        display: flex;
+        background-color: grey;
+        padding: 5px;
+        margin: 135px auto 0px;
+        width: 200vh; 
+        justify-content: center;
+    }
+
+    #navigationmobile img {
+        max-width: 44%;
     }
 } 
