--- a/style/main.css
+++ b/style/main.css
@@ -16,41 +16,79 @@ div#face img, div#face picture {
     max-width: 100%;
 }
 
+@media (max-width: 501px) {
+    div#face img {
+        padding-top: 30px;
+    }
+}
+
 
 /*  
 padding: 40px;
 padding: 10px 30px 10px 30px;
 */
+
 div#section {
-    display: flex;   
-    justify-content: center;
-    margin-top: 60px;
-    margin-bottom: 60px;
-}
-
-div#section a.divisor-section {
-    padding-right: 100px;
-}
-
-div#section img:hover {
-    margin-bottom: 0px;
-    border: 1px solid black;
-}
-
-
-
-div.section #img01 {
     position: relative;
 }
 
-div#section-masc > p {
-    color: black;
+div#section #img01 {
     position: absolute;
-    top: 2px;   
-    border: 1px solid black;
-    width: 310px;
+    top: 50px;
+    left: 13.5%;
 }
 
-div.section #img01:hover {
-    display: flex;
+div#section #img02 {
+    position: absolute;
+    max-width: 100%;
+    top: 50px;
+    left: 39.5%;
+}
+
+div#section #img03 {
+    position: absolute;
+    top: 50px;
+    left: 65.5%;
+}
+
+div#section img:hover {
+    border: 1px solid black;
+    left: -1px;
+}
+
+.img870px-c {
+
+    left: 10%;
+}
+
+@media (max-width: 1300px) {
+
+    div#section #img01 {
+        left: 5%;
+    }
+    
+    div#section #img02 {
+        left: 36%;
+    }
+    
+    div#section #img03 {
+        left: 67%;
+    }
+}
+
+
+/* APAGAR DEPOIS  */
+@media (max-width: 1080px) {
+
+    div#section #img01 {
+        left: 5%;
+    }
+    
+    div#section #img02 {
+        left: 36%;
+    }
+    
+    div#section #img03 {
+        left: 67%;
+    }
 }
