--- a/style/main.css
+++ b/style/main.css
@@ -4,6 +4,76 @@ main {
     color: black;
 }
 
+
+
+/* ---------- MENU ---------- */
+div#menu {
+    background-color: rgba(211, 211, 211, 0.423);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    padding: 20px 20px 10px;
+}
+
+div#menu > ul > li > a {
+    color: black;
+    text-decoration: none;
+}
+
+#menu > ul {
+    display: block;
+    text-align: center;
+    padding: 0px;
+}
+
+#menu > ul > li {
+    display: inline-block;
+    color: black;
+    padding-left: 20px;
+    margin-left: 0px;
+    position: relative;
+}
+
+#menu > ul > li::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -5px;
+
+    width: 110%;
+    height: 1px;
+    background-color: black;
+}
+
+#menu > ul > li::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -5px;
+
+    width: 110%;
+    height: 1.5px;
+    background-color: white;
+
+    transform: scale(0);
+    transform-origin: right;
+    transition: transform 0.5s;
+}
+
+#menu > ul > li:hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -5px;
+
+    width: 110%;
+    height: 1.5px;
+    background-color: white;
+
+    transform: scale(1);
+    transform-origin: left;
+    transition: transform 0.5s;
+} 
+
 /* Imagem Principal */
 div#face {
     background-color: rgba(211, 211, 211, 0.423);
@@ -18,7 +88,7 @@ div#face {
 div#face img, div#face picture {
     display: block;
     margin: auto;
-    max-width: 100%;
+    max-width: 90%;
 }
 
 /*  
